# fastapi-with-graphql

./: README.md  pyproject.toml
fastapi_with_graphql/src/: main.py
